Add ClusterNodesStatus() (#153)
* Commit to allow peer review. This is not meant to be merged yet!

* Fixed Makefile

* Iterative push during debugging; this currently builds but it is not complete.

* add new api endpoint for node pool add, delete, scale (#146)

* Commit to allow peer review. This is not meant to be merged yet!

* The right api.proto that I want to use.

* Iterative again. Disregard the things.

* Final push. Implented NodePoolGet for swagger API.

* unit tests for machineset (#149)
add new api endpoint for node pool add, delete, scale (#146)
Fixed Makefile
add new controller for managing addons
Implented NodePoolGet for swagger API.
use GetClusterFromNamespace util, fix Reconcile (#154)

* Removed superfluous klog

* Quick update of comment so that it actually reads like English instead of uneducated mess.

* Moved method to cluster.go for better contextual location. Fixed up api.proto renaming the functions for that context change. Removed roles from GetNodesStatus() until there is a more reliable way to grab them.

* Revert "Moved method to cluster.go for better contextual location. Fixed up api.proto renaming the functions for that context change. Removed roles from GetNodesStatus() until there is a more reliable way to grab them."

This reverts commit 4203455fda94845bd4a966c36f5e68e3dcd5bbe6.

* Moved method to cluster.go for better contextual location. Fixed up api.proto renaming the functions for that context change. Removed roles from GetNodesStatus() until there is a more reliable way to grab them.

* Revert "Moved method to cluster.go for better contextual location. Fixed up api.proto renaming the functions for that context change. Removed roles from GetNodesStatus() until there is a more reliable way to grab them."

This reverts commit 4203455fda94845bd4a966c36f5e68e3dcd5bbe6.

* Overcoming git snafu. Fixing proto to be the latest version.

* Fixup of the rest of the git snafu story that went all
